disc/k3s/dsf.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dsf-set
  namespace: default
spec:
  serviceName: "dsf"
  replicas: 50
  selector:
    matchLabels:
      app: dsfd
  template:
    metadata:
      labels:
        app: dsfd
    spec:
      containers:
      - name: dsf-peer
        image: ghcr.io/dist-svc/dsf:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 10100
          - containerPort: 10180
        volumeMounts:
          - name: persistent-storage
            mountPath: /var/dsfd
            readOnly: false
        resources:
          requests:
            memory: "40Mi"

  volumeClaimTemplates:
  - metadata:
      name: persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: smb
      resources:
        requests:
          storage: 1Gi
