disc/k3s/isolate.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dsf-isolate
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: dsfd
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/22
    ports:
    - protocol: UDP
      port: 10100
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.0/22
    ports:
    - protocol: UDP
      port: 10100
